// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document Viewer Error component should render without crashing 1`] = `
<div
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "display": "flex",
      "height": "100%",
      "justifyContent": "space-around",
    }
  }
>
  <Component
    style={
      Object {
        "position": "fixed",
        "top": 0,
      }
    }
  >
    <span />
  </Component>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-between",
        "margin": ".5em 0 .6em 0",
        "maxWidth": 500,
      }
    }
  >
    <svg
      height="290px"
      version="1.1"
      viewBox="0 0 442 240"
      width="442px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
        id="Page-1"
        stroke="none"
        strokeWidth="1"
      >
        <g
          id="No-provider"
          transform="translate(-9.000000, 5.000000)"
        >
          <g
            id="Document"
            transform="translate(9.000000, 0.000000)"
          >
            <ellipse
              cx="221"
              cy="230"
              fill="#DFDFDF"
              id="Oval-2"
              rx="221"
              ry="27"
            />
            <path
              d="M129.868875,229.165007 L129.868875,6.81087018 C129.868875,3.49716168 132.555166,0.810870179 135.868875,0.810870179 L262.245476,0.810870179 C263.836775,0.810870179 265.362898,1.44301122 266.488117,2.56822949 L311.211391,47.2915035 C312.336609,48.4167218 312.96875,49.9428453 312.96875,51.5341442 L312.96875,229.724935 C312.96875,233.038644 310.282458,235.724935 306.96875,235.724935 C306.962205,235.724935 306.95566,235.724924 306.949115,235.724903 L135.84924,235.164975 C132.543214,235.154156 129.868875,232.47105 129.868875,229.165007 Z"
              fill="#EEEEEE"
              id="Path"
              stroke="#A4A8AD"
              strokeWidth="11"
            />
            <ellipse
              cx="184"
              cy="120.5"
              fill="#A4A8AD"
              id="Oval"
              rx="9"
              ry="10.5"
            />
            <ellipse
              cx="259"
              cy="120.5"
              fill="#A4A8AD"
              id="Oval-Copy"
              rx="9"
              ry="10.5"
            />
            <path
              d="M203.877833,155.306526 C215.78965,143.944752 227.408534,143.944752 238.734486,155.306526"
              id="Path-2"
              stroke="#A4A8AD"
              strokeLinecap="round"
              strokeWidth="7"
            />
            <path
              d="M262.50809,3.20349862 L262.50809,46.2114256 C262.50809,47.3159951 263.40352,48.2114256 264.50809,48.2114256 L308.124241,48.2114256"
              id="Path-2"
              stroke="#A4A8AD"
              strokeWidth="11"
            />
          </g>
        </g>
      </g>
    </svg>
    <WithStyles(ForwardRef(Typography))
      align="center"
      color="textSecondary"
      style={
        Object {
          "fontWeight": "bolder",
        }
      }
      variant="h5"
    >
      The document doesn't have any preview images
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      align="center"
      color="textSecondary"
      style={
        Object {
          "whiteSpace": "pre-wrap",
        }
      }
      variant="subtitle1"
    />
  </div>
</div>
`;

exports[`Document Viewer Error component should render without crashing 2`] = `
<div
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "display": "flex",
      "height": "100%",
      "justifyContent": "space-around",
    }
  }
>
  <Component
    style={
      Object {
        "position": "fixed",
        "top": 0,
      }
    }
  >
    <span />
  </Component>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-between",
        "margin": ".5em 0 .6em 0",
        "maxWidth": 500,
      }
    }
  >
    <svg
      height="290px"
      version="1.1"
      viewBox="0 0 442 240"
      width="442px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
        id="Page-1"
        stroke="none"
        strokeWidth="1"
      >
        <g
          id="No-provider"
          transform="translate(-9.000000, 5.000000)"
        >
          <g
            id="Document"
            transform="translate(9.000000, 0.000000)"
          >
            <ellipse
              cx="221"
              cy="230"
              fill="#DFDFDF"
              id="Oval-2"
              rx="221"
              ry="27"
            />
            <path
              d="M129.868875,229.165007 L129.868875,6.81087018 C129.868875,3.49716168 132.555166,0.810870179 135.868875,0.810870179 L262.245476,0.810870179 C263.836775,0.810870179 265.362898,1.44301122 266.488117,2.56822949 L311.211391,47.2915035 C312.336609,48.4167218 312.96875,49.9428453 312.96875,51.5341442 L312.96875,229.724935 C312.96875,233.038644 310.282458,235.724935 306.96875,235.724935 C306.962205,235.724935 306.95566,235.724924 306.949115,235.724903 L135.84924,235.164975 C132.543214,235.154156 129.868875,232.47105 129.868875,229.165007 Z"
              fill="#EEEEEE"
              id="Path"
              stroke="#A4A8AD"
              strokeWidth="11"
            />
            <ellipse
              cx="184"
              cy="120.5"
              fill="#A4A8AD"
              id="Oval"
              rx="9"
              ry="10.5"
            />
            <ellipse
              cx="259"
              cy="120.5"
              fill="#A4A8AD"
              id="Oval-Copy"
              rx="9"
              ry="10.5"
            />
            <path
              d="M203.877833,155.306526 C215.78965,143.944752 227.408534,143.944752 238.734486,155.306526"
              id="Path-2"
              stroke="#A4A8AD"
              strokeLinecap="round"
              strokeWidth="7"
            />
            <path
              d="M262.50809,3.20349862 L262.50809,46.2114256 C262.50809,47.3159951 263.40352,48.2114256 264.50809,48.2114256 L308.124241,48.2114256"
              id="Path-2"
              stroke="#A4A8AD"
              strokeWidth="11"
            />
          </g>
        </g>
      </g>
    </svg>
    <WithStyles(ForwardRef(Typography))
      align="center"
      color="textSecondary"
      style={
        Object {
          "fontWeight": "bolder",
        }
      }
      variant="h5"
    />
    <WithStyles(ForwardRef(Typography))
      align="center"
      color="textSecondary"
      style={
        Object {
          "whiteSpace": "pre-wrap",
        }
      }
      variant="subtitle1"
    />
  </div>
</div>
`;
